--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pyzmq==17.0.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
+tabulate==0.8.2
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.0.2
