--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ entrypoints==0.2.3
 html5lib==1.0.1
 idna==2.7
 ipykernel==4.8.2
-ipython==6.4.0
+ipython==6.5.0
 ipython-genutils==0.2.0
-ipywidgets==7.2.1
+ipywidgets==7.3.1
 jedi==0.12.1
 Jinja2==2.10
 jsonschema==2.6.0
@@ -25,29 +25,30 @@ mistune==0.8.3
 mpmath==1.0.0
 nbconvert==5.3.1
 nbformat==4.4.0
-notebook==5.5.0
-numpy==1.14.5
+notebook==5.6.0
+numpy==1.15.0
 pandas==0.23.3
 pandocfilters==1.4.2
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
-prompt-toolkit==1.0.15
+prometheus-client==0.3.1
+prompt-toolkit==2.0.4
 ptyprocess==0.6.0
 Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.7.3
 pytz==2018.5
-pyzmq==17.0.0
+pyzmq==17.1.0
 qtconsole==4.3.1
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
 terminado==0.8.1
 testpath==0.3.1
-tornado==5.0.2
+tornado==5.1
 traitlets==4.3.2
 urllib3==1.23
 wcwidth==0.1.7
 webencodings==0.5.1
-widgetsnbextension==3.2.1
+widgetsnbextension==3.3.1
