Parse kennels for collies too

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ geopy = "^2.2.0"
 beautifulsoup4 = "^4.11.1"
 pandas = "^1.4.3"
 plotly = "^5.10.0"
+kaleido = "0.2.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
